samples/_failures_safe/1761619214_1a68da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc0b3c6c.c: In function ‘main’:
./samples/SAFE/__tmp_cc0b3c6c.c:137:11: error: expected ‘;’ at end of input
  137 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_cc0b3c6c.c:137:5: error: expected declaration or statement at end of input
  137 |     printf
      |     ^~~~~~
